# renderer-3D

./: README.md
Renderer3D/: CMakeLists.txt  README.md
Renderer3D/assets/shaders/: BaseFragmentShader.fs  BaseVertexShader.vs  LightSourceFragmentShader.fs  NormalFragmentShader.fs  NormalVertexShader.vs
Renderer3D/include/: Camera.h  DirectionalLight.h  Entity.h  Light.h  Mesh.h  Model.h  PointLight.h  PositionalCamera.h  Renderable.h  Shader.h  Shape.h
Renderer3D/include/lights/: Light.h  SpotLight.h
Renderer3D/include/renderables/: Model.h  Shape.h
Renderer3D/src/: glad.c  main.cpp
